--- a/login.html
+++ b/login.html
@@ -2,17 +2,22 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>🔐 Login</h2>
-    <form action="login.php" method="POST">
+    <form method="POST" action="login.php">
         <label>Profilname:</label>
         <input type="text" name="profile_name" required>
+
         <label>Passwort:</label>
         <input type="password" name="password" required>
+
         <button type="submit">Einloggen</button>
     </form>
+
+    <script src="main.js"></script>
 </body>
 </html>
