--- a/login.html
+++ b/login.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>🔐 Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>🔐 Login</h2>
     <form method="POST" action="login.php">
-        <label>Profilname:</label>
-        <input type="text" name="profile_name" required>
+        <label for="profile_name">Profilname:</label>
+        <input type="text" id="profile_name" name="profile_name" required>
 
-        <label>Passwort:</label>
-        <input type="password" name="password" required>
+        <label for="password">Passwort:</label>
+        <input type="password" id="password" name="password" required>
 
-        <button type="submit">Einloggen</button>
+        <button type="submit">✅ Einloggen</button>
     </form>
 
     <script src="main.js"></script>
