--- a/login.html
+++ b/login.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <h2>🔐 Login</h2>
+
     <form action="login.php" method="POST">
-        <label>Profilname:</label>
-        <input type="text" name="profile_name" required>
-        <label>Passwort:</label>
-        <input type="password" name="password" required>
-        <button type="submit">Einloggen</button>
+        <fieldset>
+            <legend>Login-Daten</legend>
+
+            <label for="profile_name">Profilname:</label>
+            <input type="text" id="profile_name" name="profile_name" required>
+
+            <label for="password">Passwort:</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Einloggen</button>
+        </fieldset>
     </form>
 </body>
 </html>
