--- a/register.html
+++ b/register.html
@@ -28,5 +28,11 @@
             <button type="submit">Benutzer hinzufügen</button>
         </fieldset>
     </form>
+
+    <div class="action-box">
+        <form action="index.php" method="GET">
+            <button type="submit">⬅️ Zurück zur Startseite</button>
+        </form>
+    </div>
 </body>
 </html>
