--- a/login.html
+++ b/login.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Benutzer erstellen</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>🔐 Login</h2>
+    <h2>➕ Neuen Benutzer erstellen</h2>
 
-    <form action="login.php" method="POST">
+    <form action="register.php" method="POST">
         <fieldset>
-            <legend>Login-Daten</legend>
+            <legend>Benutzerdaten</legend>
 
             <label for="profile_name">Profilname:</label>
             <input type="text" id="profile_name" name="profile_name" required>
@@ -19,7 +19,13 @@
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Einloggen</button>
+            <label for="username">Anzeigename:</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="rank">Rang:</label>
+            <input type="text" id="rank" name="rank" value="user" required>
+
+            <button type="submit">Benutzer hinzufügen</button>
         </fieldset>
     </form>
 </body>
